# SOFACE24_Jakob_Minna_Assignment02

./: .gitignore  CMakeLists.txt  README.md  autograde.py
include/: combat_medic.h  queue.hpp  queue_array.hpp  queue_linked_list.hpp  soldier.h
sandbox/: CMakeLists.txt
src/: queue_array.cpp  queue_linked_list.cpp  tests.cpp  vtable_example.c
test/: CMakeLists.txt
test/src/: test_c_wargame.cpp  test_cpp_wargame.cpp
wargame_c/: CMakeLists.txt
wargame_c/include/: unit.h
wargame_c/src/: combat_medic.c  soldier.c  unit.c
wargame_cpp/: CMakeLists.txt
wargame_cpp/include/: combat_medic.hpp  soldier.hpp  unit.hpp
wargame_cpp/src/: combat_medic.cpp  soldier.cpp  unit.cpp
